--- a/index.html
+++ b/index.html
@@ -3,12 +3,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     
 </head>
 <body>
-    
+    <div class="banner">
+        <h1 class="header">
+            add an avenger
+        </h1>
+    </div>
+    <div class="user-input">
+        <form id="hero-form">
+            <div class="hero-from-input">
+                <label for="alias">Alias</label>
+                <input type="text" id="alias" class="text-box">
+            </div>
+            <div class="hero-from-input">
+                <label for="powers">Powers</label>
+                <input type="text" id="powers" class="text-box">
+            </div>            
+            <div class="hero-from-input">
+                <label for="full-name">Full Name</label>
+                <input type="text" id="full-name" class="text-box">
+            </div>            
+            <div class="hero-from-input">
+                <label for="first-appearance">First Appearance</label>
+                <input type="text" id="first-appearance" class="text-box">
+            </div>
+            <div class="hero-from-input">
+                <label for="image">Enter URL for Image</label>
+                <input type="text" id="image" class="text-box">
+            </div>
+            <div class="hero-from-input">
+                <input type="submit" value="Submit" class="btn">
+            </div>
+        </form>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
